--- a/clase_02/presentacion_clase_02.ipynb
+++ b/clase_02/presentacion_clase_02.ipynb
@@ -45,7 +45,7 @@
    ],
    "source": [
     "# initial setup\n",
-    "%run \"../../../common/0_notebooks_base_setup.py\"\n"
+    "%run \"../common/0_notebooks_base_setup.py\"\n"
    ]
   },
   {
@@ -2315,7 +2315,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2329,7 +2329,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5edc29c2ed010d6458d71a83433b383a96a8cbd3efe8531bc90c4b8a5b8bcec9"
+   }
   }
  },
  "nbformat": 4,
