--- a/clase_02/clase02.ipynb
+++ b/clase_02/clase02.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "Name: Titulo, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>segundo</th>\n",
+       "      <th>apellido</th>\n",
+       "      <th>servicio</th>\n",
+       "      <th>vencimiento</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sr.</td>\n",
+       "      <td>Romildo</td>\n",
+       "      <td>Ricardo</td>\n",
+       "      <td>Lopez</td>\n",
+       "      <td>Claro</td>\n",
+       "      <td>12/03/22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sra.</td>\n",
+       "      <td>Maria</td>\n",
+       "      <td>Ines</td>\n",
+       "      <td>Gonzales</td>\n",
+       "      <td>Edenor</td>\n",
+       "      <td>04/09/22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sr.</td>\n",
+       "      <td>Danilo</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gugiari</td>\n",
+       "      <td>Edenor</td>\n",
+       "      <td>04/09/22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sra.</td>\n",
+       "      <td>Romina</td>\n",
+       "      <td>Camila</td>\n",
+       "      <td>Perez</td>\n",
+       "      <td>Movistar</td>\n",
+       "      <td>09/10/22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sra.</td>\n",
+       "      <td>Micaela</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Vilas</td>\n",
+       "      <td>Movistar</td>\n",
+       "      <td>08/10/22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  titulo   nombre  segundo  apellido  servicio vencimiento\n",
+       "0    Sr.  Romildo  Ricardo     Lopez     Claro    12/03/22\n",
+       "1   Sra.    Maria     Ines  Gonzales    Edenor    04/09/22\n",
+       "2    Sr.   Danilo      NaN   Gugiari    Edenor    04/09/22\n",
+       "3   Sra.   Romina   Camila     Perez  Movistar    09/10/22\n",
+       "4   Sra.  Micaela      NaN     Vilas  Movistar    08/10/22"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# La solucion:\n",
+    "\n",
+    "datos = datos.rename(columns = {'Titulo':'titulo','Nombre':'nombre','Segundo nombre':'segundo','Apellido':'apellido','Servicio':'servicio','Fecha de vencimiento':'vencimiento'})\n",
+    "display (datos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -348,18 +452,6 @@
     }
    ],
    "source": [
-    "# La solucion:\n",
-    "\n",
-    "datos = datos.rename(columns = {'Titulo':'titulo','Nombre':'nombre','Segundo nombre':'segundo','Apellido':'apellido','Servicio':'servicio','Fecha de vencimiento':'vencimiento'})\n",
-    "display (datos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Acá Reemplazo los NaN (donde no hay datos) por un string vacio.\n",
     "datos = datos.fillna('')\n",
     "datos = datos.rename(columns = {'Titulo':'titulo','Nombre':'nombre','Segundo nombre':'segundo','Apellido':'apellido','Servicio':'servicio','Fecha de vencimiento':'vencimiento'})\n",
@@ -368,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +485,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('DH')",
+   "display_name": "Python 3.9.12 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -407,12 +499,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "711f6e5f7571664aca6bff8f42a9cbe6dcf26da48da77736dca0ec8fbe102a72"
+    "hash": "2f449b8568b693f6141ec168a8138af6e79aae52e9ba4cff22a73f24fea6b928"
    }
   }
  },
