--- a/clase_02/presentacion_clase_02.ipynb
+++ b/clase_02/presentacion_clase_02.ipynb
@@ -8,54 +8,6 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/media/paulati/Nuevo vol/paula/dh/2021/dsad_2021/common\n",
-      "default checking\n",
-      "Running command `conda list`... ok\n",
-      "jupyterlab=2.2.6 already installed\n",
-      "pandas=1.1.5 already installed\n",
-      "bokeh=2.2.3 already installed\n",
-      "seaborn=0.11.0 already installed\n",
-      "matplotlib=3.3.2 already installed\n",
-      "ipywidgets=7.5.1 already installed\n",
-      "pytest=6.2.1 already installed\n",
-      "chardet=4.0.0 already installed\n",
-      "psutil=5.7.2 already installed\n",
-      "scipy=1.5.2 already installed\n",
-      "statsmodels=0.12.1 already installed\n",
-      "scikit-learn=0.23.2 already installed\n",
-      "xlrd=2.0.1 already installed\n",
-      "Running command `conda install --yes nltk=3.5.0`... ok\n",
-      "Collecting package metadata (current_repodata.json): ...working... done\n",
-      "Solving environment: ...working... done\n",
-      "\n",
-      "# All requested packages already installed.\n",
-      "\n",
-      "\n",
-      "unidecode=1.1.1 already installed\n",
-      "pydotplus=2.0.2 already installed\n",
-      "pandas-datareader=0.9.0 already installed\n",
-      "flask=1.1.2 already installed\n"
-     ]
-    }
-   ],
-   "source": [
-    "# initial setup\n",
-    "%run \"../common/0_notebooks_base_setup.py\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
    "outputs": [],
    "source": [
     "# NOTA: Esta es la forma de armar html con algun contenido dinamico. No borrar porque sirve como ejemplo\n",
@@ -79,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -179,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -193,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -445,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -496,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -544,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -559,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -597,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -613,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -656,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -701,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -717,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -740,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -780,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -796,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -818,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -837,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -880,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -895,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -916,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -951,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -969,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1007,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1024,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1037,13 +989,37 @@
        "100"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "calculo_xyz(20,30,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculo_xyz(20,30)"
    ]
   },
   {
@@ -1058,34 +1034,10 @@
     {
      "data": {
       "text/plain": [
-       "75.0"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calculo_xyz(20,30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "0.02"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1124,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1137,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1177,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1196,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1340,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1348,14 +1300,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['a', 'b', 'e', 'c', 'e', 'd', 'a', 'r', 'i', 'o']"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'letras'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/albertopaparelli/Facultad/Cursos/Digital House - Data Science/code/clase_02/presentacion_clase_02.ipynb Celda 69\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/albertopaparelli/Facultad/Cursos/Digital%20House%20-%20Data%20Science/code/clase_02/presentacion_clase_02.ipynb#ch0000069?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mletras\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/albertopaparelli/Facultad/Cursos/Digital%20House%20-%20Data%20Science/code/clase_02/presentacion_clase_02.ipynb#ch0000069?line=1'>2</a>\u001b[0m palabra \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mabecedario\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/albertopaparelli/Facultad/Cursos/Digital%20House%20-%20Data%20Science/code/clase_02/presentacion_clase_02.ipynb#ch0000069?line=2'>3</a>\u001b[0m a_lista \u001b[39m=\u001b[39m letras\u001b[39m.\u001b[39mcrea_lista(palabra)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'letras'"
+     ]
     }
    ],
    "source": [
@@ -1367,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1413,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1508,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1526,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1547,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1568,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1588,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1647,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1674,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1697,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1747,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1760,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1784,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1808,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1832,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1856,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1924,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1937,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1961,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1985,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2009,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2033,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2106,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2164,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2199,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2233,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2315,7 +2268,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -2329,11 +2282,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5edc29c2ed010d6458d71a83433b383a96a8cbd3efe8531bc90c4b8a5b8bcec9"
+    "hash": "4a5b44375aa7797406260e93069e3e225c93822021daeee6ebb7070862ee7872"
    }
   }
  },
