--- a/clase_02/1_repaso_python.ipynb
+++ b/clase_02/1_repaso_python.ipynb
@@ -1,37 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ipywidgets'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m~/Facultad/Cursos/Digital House - Data Science/code/common/0_notebooks_base_setup.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mipywidgets\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLayout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mHTML\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipywidgets'"
-     ]
-    }
-   ],
-   "source": [
-    "# initial setup\n",
-    "%run \"../common/0_notebooks_base_setup.py\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "<img src='../../../common/logo_DH.png' align='left' width=35%/>\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,9 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Jesse!\n",
+      "Hello, Paul!\n"
+     ]
+    }
+   ],
    "source": [
     "def greet_user(username):\n",
     "    \"\"\"Display a simple greeting.\"\"\"\n",
@@ -94,9 +72,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "I have a hamster.\n",
+      "My hamster's name is Harry.\n",
+      "\n",
+      "I have a dog.\n",
+      "My dog's name is Willie.\n"
+     ]
+    }
+   ],
    "source": [
     "def describe_pet(animal_type, pet_name):\n",
     "    \"\"\"Display information about a pet.\"\"\"\n",
@@ -121,9 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "I have a hamster.\n",
+      "My hamster's name is Harry.\n",
+      "\n",
+      "I have a hamster.\n",
+      "My hamster's name is Harry.\n"
+     ]
+    }
+   ],
    "source": [
     "describe_pet(animal_type='hamster', pet_name='harry')\n",
     "describe_pet(pet_name='harry', animal_type='hamster')"
@@ -149,9 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "I have a dog.\n",
+      "My dog's name is Willie.\n",
+      "\n",
+      "I have a dog.\n",
+      "My dog's name is Willie.\n"
+     ]
+    }
+   ],
    "source": [
     "def describe_pet(pet_name, animal_type='dog'):\n",
     "    \"\"\"Display information about a pet.\"\"\"\n",
@@ -171,9 +188,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "I have a dog.\n",
+      "My dog's name is Willie.\n",
+      "\n",
+      "I have a dog.\n",
+      "My dog's name is Willie.\n",
+      "\n",
+      "I have a hamster.\n",
+      "My hamster's name is Harry.\n",
+      "\n",
+      "I have a hamster.\n",
+      "My hamster's name is Harry.\n",
+      "\n",
+      "I have a hamster.\n",
+      "My hamster's name is Harry.\n"
+     ]
+    }
+   ],
    "source": [
     "# A dog named Willie.\n",
     "describe_pet('willie')\n",
@@ -202,9 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Lee Hooker\n",
+      "Jimi Hendrix\n",
+      "John Lee Hooker\n"
+     ]
+    }
+   ],
    "source": [
     "def get_formatted_name(first_name, middle_name, last_name):\n",
     "    \"\"\"Return a full name, neatly formatted.\"\"\"\n",
@@ -246,9 +295,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('pepperoni',)\n",
+      "('mushrooms', 'green peppers', 'extra cheese')\n"
+     ]
+    }
+   ],
    "source": [
     "def make_pizza(*toppings):\n",
     "    \"\"\"Print the list of toppings that have been requested.\"\"\"\n",
@@ -277,9 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'location': 'princeton', 'field': 'physics', 'first_name': 'albert', 'last_name': 'einstein'}\n"
+     ]
+    }
+   ],
    "source": [
     "def build_profile(first, last, **user_info):\n",
     "    \"\"\"Build a dictionary containing everything we know about a user.\"\"\"\n",
@@ -325,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,9 +405,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fabricante': 'subaru',\n",
+       " 'modelo': 'outback',\n",
+       " 'color': 'blue',\n",
+       " 'tow_package': True}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "car = make_car ('subaru', 'outback', color = 'blue', tow_package = True)\n",
     "car"
@@ -387,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,27 +499,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "calculo_a(3,4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "calculo_b(3,4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'r' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/albertopaparelli/Facultad/Cursos/Digital House - Data Science/code/clase_02/1_repaso_python.ipynb Celda 28\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/albertopaparelli/Facultad/Cursos/Digital%20House%20-%20Data%20Science/code/clase_02/1_repaso_python.ipynb#ch0000029?line=0'>1</a>\u001b[0m calculo_a(\u001b[39m10\u001b[39m,\u001b[39m20\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/albertopaparelli/Facultad/Cursos/Digital%20House%20-%20Data%20Science/code/clase_02/1_repaso_python.ipynb#ch0000029?line=1'>2</a>\u001b[0m r\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'r' is not defined"
+     ]
+    }
+   ],
    "source": [
     "calculo_a(10,20)\n",
     "r"
@@ -779,7 +893,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3.9.12 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -793,11 +907,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5edc29c2ed010d6458d71a83433b383a96a8cbd3efe8531bc90c4b8a5b8bcec9"
+    "hash": "2f449b8568b693f6141ec168a8138af6e79aae52e9ba4cff22a73f24fea6b928"
    }
   }
  },
