--- a/clase_03/6_desafio_solucion.ipynb
+++ b/clase_03/6_desafio_solucion.ipynb
@@ -1,50 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/media/paulati/Nuevo vol/paula/dh/2021/dsad_2021_paula/common\n",
-      "default checking\n",
-      "Running command `conda list`... ok\n",
-      "jupyterlab=2.2.6 already installed\n",
-      "pandas=1.1.5 already installed\n",
-      "bokeh=2.2.3 already installed\n",
-      "seaborn=0.11.0 already installed\n",
-      "matplotlib=3.3.2 already installed\n",
-      "ipywidgets=7.5.1 already installed\n",
-      "pytest=6.2.1 already installed\n",
-      "chardet=4.0.0 already installed\n",
-      "psutil=5.7.2 already installed\n",
-      "scipy=1.5.2 already installed\n",
-      "statsmodels=0.12.1 already installed\n",
-      "scikit-learn=0.23.2 already installed\n",
-      "xlrd=2.0.1 already installed\n",
-      "Running command `conda install --yes nltk=3.5.0`... ok\n",
-      "Collecting package metadata (current_repodata.json): ...working... done\n",
-      "Solving environment: ...working... done\n",
-      "\n",
-      "# All requested packages already installed.\n",
-      "\n",
-      "\n",
-      "unidecode=1.1.1 already installed\n",
-      "pydotplus=2.0.2 already installed\n",
-      "pandas-datareader=0.9.0 already installed\n",
-      "flask=1.1.2 already installed\n"
-     ]
-    }
-   ],
-   "source": [
-    "# settings local:\n",
-    "%run \"../../../common/0_notebooks_base_setup.py\"   "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,16 +51,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['10107', '2871', '2', '2003', 'Motorcycles', 'USA'],\n",
+       "       ['10121', '2765.9', '5', '2003', 'Motorcycles', 'France'],\n",
+       "       ['10134', '3884.34', '7', '2003', 'Motorcycles', 'France'],\n",
+       "       ...,\n",
+       "       ['10386', '5417.57', '3', '2005', 'Ships', 'Spain'],\n",
+       "       ['10397', '2116.16', '3', '2005', 'Ships', 'France'],\n",
+       "       ['10414', '3079.44', '5', '2005', 'Ships', 'USA']], dtype='<U16')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## [BORRAR_PRESENCIAL]\n",
     "\n",
     "import numpy as np\n",
     "\n",
     "# local:\n",
-    "data_location = '../Data/sales_data_sample_excercise.csv'\n",
+    "data_location = './Data/sales_data_sample_excercise.csv'\n",
     "\n",
     "data = np.genfromtxt(data_location, skip_header=1, delimiter='\\t', dtype= str)\n",
     "data"
@@ -123,9 +96,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2871.   2765.9  3884.34 ... 5417.57 2116.16 3079.44]\n",
+      "['USA' 'France' 'France' ... 'Spain' 'France' 'USA']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/70/fs5qd5yj0fzcp24q_bzk9s7m0000gn/T/ipykernel_37106/945727970.py:4: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
+      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+      "  sales_vector =  sales_vector_str.astype(np.float)\n"
+     ]
+    }
+   ],
    "source": [
     "## [BORRAR_PRESENCIAL]\n",
     "\n",
@@ -148,9 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "482.13\n",
+      "14082.8\n"
+     ]
+    }
+   ],
    "source": [
     "## [BORRAR_PRESENCIAL]\n",
     "\n",
@@ -173,9 +173,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False ...  True False False]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "342"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## [BORRAR_PRESENCIAL]\n",
     "\n",
@@ -197,9 +215,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.114771519659936"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## [BORRAR_PRESENCIAL]\n",
     "\n",
@@ -221,9 +250,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USA\n",
+      "10407\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/70/fs5qd5yj0fzcp24q_bzk9s7m0000gn/T/ipykernel_37106/3812979769.py:11: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+      "  id_vector =  id_vector_str.astype(np.int)\n"
+     ]
+    }
+   ],
    "source": [
     "## [BORRAR_PRESENCIAL]\n",
     "\n",
@@ -251,9 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3537.9507006369427\n",
+      "1939.214360481481\n"
+     ]
+    }
+   ],
    "source": [
     "## [BORRAR_PRESENCIAL]\n",
     "\n",
@@ -279,9 +335,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2003 2004 2005]\n",
+      "[1860.7718844747073, 1837.8438485766644, 2241.7723043613423]\n",
+      "2005\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/70/fs5qd5yj0fzcp24q_bzk9s7m0000gn/T/ipykernel_37106/3616862002.py:7: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+      "  data_france_years_num = data_france_years.astype(np.int)\n",
+      "/var/folders/70/fs5qd5yj0fzcp24q_bzk9s7m0000gn/T/ipykernel_37106/3616862002.py:15: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
+      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+      "  precios_year_mask = data_france_sales[years_vector_mask].astype(np.float)\n"
+     ]
+    }
+   ],
    "source": [
     "## [BORRAR_PRESENCIAL]\n",
     "\n",
@@ -313,7 +391,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -327,7 +405,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2f449b8568b693f6141ec168a8138af6e79aae52e9ba4cff22a73f24fea6b928"
+   }
   }
  },
  "nbformat": 4,
