--- a/clase_03/1_numpy.ipynb
+++ b/clase_03/1_numpy.ipynb
@@ -1,67 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/media/paulati/Nuevo vol/paula/dh/2021/dsad_2021_paula/common\n",
-      "default checking\n",
-      "Running command `conda list`... ok\n",
-      "jupyterlab=2.2.6 already installed\n",
-      "pandas=1.1.5 already installed\n",
-      "bokeh=2.2.3 already installed\n",
-      "seaborn=0.11.0 already installed\n",
-      "matplotlib=3.3.2 already installed\n",
-      "ipywidgets=7.5.1 already installed\n",
-      "pytest=6.2.1 already installed\n",
-      "chardet=4.0.0 already installed\n",
-      "psutil=5.7.2 already installed\n",
-      "scipy=1.5.2 already installed\n",
-      "statsmodels=0.12.1 already installed\n",
-      "scikit-learn=0.23.2 already installed\n",
-      "xlrd=2.0.1 already installed\n",
-      "Running command `conda install --yes nltk=3.5.0`... ok\n",
-      "Collecting package metadata (current_repodata.json): ...working... done\n",
-      "Solving environment: ...working... done\n",
-      "\n",
-      "# All requested packages already installed.\n",
-      "\n",
-      "\n",
-      "unidecode=1.1.1 already installed\n",
-      "pydotplus=2.0.2 already installed\n",
-      "pandas-datareader=0.9.0 already installed\n",
-      "flask=1.1.2 already installed\n"
-     ]
-    }
-   ],
-   "source": [
-    "%run \"../../../common/0_notebooks_base_setup.py\"\n",
-    "from dhtest import test_1_numpy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "---\n",
-    "\n",
-    "<img src='../../../common/logo_DH.png' align='left' width=35%/>\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -157,8 +96,6 @@
     "Los array de tres dimensiones o más se nombran N-dimensionales.\n",
     "\n",
     "\n",
-    "![Image](img/numpy.jpg)\n",
-    "\n",
     "---"
    ]
   },
@@ -195,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -372,7 +309,7 @@
    },
    "source": [
     "<div id=\"caja1\" style=\"float:left;width: 100%;\">\n",
-    "  <div style=\"float:left;width: 15%;\"><img src=\"../../../common/icons/para_seguir_pensando.png\" style=\"align:left\"/> </div>\n",
+    "  <div style=\"float:left;width: 15%;\"> </div>\n",
     "  <div style=\"float:left;width: 85%;\"><label>¿Qué elemento de la tupla indica la cantidad de filas? <br/> ¿Y la cantidad de columnas?</label></div>\n",
     "</div>"
    ]
@@ -401,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -414,7 +351,7 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,7 +2026,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -2103,10 +2040,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   },
   "toc-autonumbering": false,
-  "toc-showcode": true
+  "toc-showcode": true,
+  "vscode": {
+   "interpreter": {
+    "hash": "2f449b8568b693f6141ec168a8138af6e79aae52e9ba4cff22a73f24fea6b928"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
